--- a/traveller/package.json
+++ b/traveller/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
     "expo": "^48.0.4",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
