--- a/traveller/package.json
+++ b/traveller/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "^48.0.4",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "^18.2.0",
